Start stubbing out the bare essentials of an event emitting store.
This was needed to be able to find the right bag for a tiddler.

This is not yet correct, despite being able to pass some tests.

--- a/README
+++ b/README
@@ -35,4 +35,4 @@ Entities are stored in the current directory:
 * tiddlers are saved as files by title, JSON on disk.
 
 A convenient way to test it is to use the test_urlmap.py
-and http_runner.py files from the Python distribution.
+and http_runner.py files from the Python TiddlyWeb distribution.
